--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "choose:javascript": "yarn install --silent --frozen-lockfile && bash ./scripts/chooseJavascript",
-    "choose:typescript": "yarn install --silent --frozen-lockfile && bash ./scripts/chooseTypescript",
-    "decision:notMade": "bash ./scripts/decisionNotMade",
-    "start": "yarn decision:notMade && cdt start",
-    "build": "yarn decision:notMade && yarn build:client && yarn build:server",
-    "build:client": "yarn decision:notMade && cdt build",
-    "build:server": "yarn decision:notMade && tsc --project tsconfig.server.json && cp app/env.js dist/app/env.js",
-    "dev": "yarn decision:notMade && cdt dev",
-    "test": "yarn decision:notMade && NODE_ENV=test jest -c ./jest/config.json",
-    "lint": "yarn decision:notMade && eslint './app/{client,server}/**/*.{js,jsx,ts,tsx}'",
+    "start": "cdt start",
+    "build": "yarn build:client && yarn build:server",
+    "build:client": "cdt build",
+    "build:server": "tsc --project tsconfig.server.json && cp app/env.js dist/app/env.js",
+    "dev": "cdt dev",
+    "test": "NODE_ENV=test jest -c ./jest/config.json",
+    "lint": "eslint './app/{client,server}/**/*.{js,jsx,ts,tsx}'",
     "reset-staging": "reset-staging --github-token $GITHUB_TOKEN --slack-channel CHANGE-TO-YOUR-SLACK-CHANNEL"
   },
   "engines": {
@@ -24,7 +21,10 @@
     "@deliveroo/logger": "^3.0.0",
     "@deliveroo/tools-component-library": "24.12.1",
     "css-modules-typescript-loader": "^4.0.1",
-    "execa": "5",
+    "react-router-dom": "^6.10.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "react-redux": "^8.0.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-required-if": "^1.0.3",
@@ -34,9 +34,6 @@
     "@deliveroo/express-identity": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.20.2",
-    "@babel/plugin-transform-typescript": "^7.20.2",
     "@deliveroo/eslint-config": "^5.0.0",
     "@deliveroo/prettier-config": "^1.0.0",
     "@deliveroo/reset-staging": "^1.1.0",
